katars/tests/snaps/snapshots/snap_errors__span_type_args.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"Nonexistent[Int]\")"
---
Error: undefined variable 'Nonexistent'
   ╭─[<test>:1:1]
   │
 1 │ Nonexistent[Int]
   │ ─────┬─────  
   │      ╰─────── undefined variable 'Nonexistent'
───╯
